--- a/Client/src/main/resources/org/example/mainWindow.fxml
+++ b/Client/src/main/resources/org/example/mainWindow.fxml
@@ -19,7 +19,7 @@
                             <items>
                                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                                     <children>
-                                        <ListView layoutX="-43.0" layoutY="32.0" prefHeight="210.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0" />
+                                        <ListView fx:id="usersList" layoutX="-43.0" layoutY="32.0" prefHeight="210.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="32.0" />
                                         <Label layoutX="60.0" layoutY="12.0" prefHeight="29.0" prefWidth="148.0" text="Участники" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                             <opaqueInsets>
                                                 <Insets />
